config documents of api and add response
