# docs/swagger.yaml
@@ -1,223 +1,118 @@
 basePath: /
 definitions:
+  dtos.LoginUser:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  dtos.RegisterUser:
+    properties:
+      avatar_user:
+        type: string
+      email:
+        type: string
+      first_last_name:
+        type: string
+      password:
+        minLength: 8
+        type: string
+    required:
+    - avatar_user
+    - email
+    - first_last_name
+    - password
+    type: object
+  dtos.Response:
+    properties:
+      code:
+        type: integer
+      data: {}
+      status:
+        type: string
+    type: object
   handler.errorResponse:
     properties:
       message:
         type: string
     type: object
-  handler.getAllInstitutosResponse:
-    properties:
-      data:
-        items:
-          $ref: '#/definitions/stopapp.Instituto'
-        type: array
-    type: object
-  handler.signInInput:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  stopapp.Instituto:
-    properties:
-      name:
-        type: string
-      id:
-        type: iteger
-      abrevia:
-        type: string
-    required:
-    - name
-    - abrevia
-    type: object
-  stopapp.User:
-    properties:
-      name:
-        type: string
-      password:
-        type: string
-      username:
-        type: string
-      email:
-        type: string
-      phone:
-        type: string
-      instituto:
-        type: integer
-    required:
-    - name
-    - password
-    - username
-    - email
-    - phone
-    - instituto
-    type: object
 host: localhost:8080
 info:
   contact: {}
-  description: API Server el registro de stop
-  title: App de stop
+  description: A tag service API in Go using Gin framework.
+  title: Tag Service API
   version: "1.0"
 paths:
-  /api/roles
-    get:
-      consumes:
-      - application/json
-      description: Get all institutos
-      operationId: get-all-institutos
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handler.getAllInstitutosResponse'
-        "400":
-          description: Bad Request
-          schema: 
-            $ref: '#/definitions/handler.errorResponse'
-        "404":
-          description: Bad Request
-          schema: 
-            $ref: '#/definitions/handler.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema: 
-            $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      security:
-      - ApiKeyAuth: []
-      sumary: Get All Institutos
-      tags:
-      - institutos
+  /auth/login:
     post:
       consumes:
       - application/json
-      description: create institutos
-      operationId: create-instituto
-      parameters:
-      - description: instituto info
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/stopapp.Instituto'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: integer
-        "400":
-          description: Bad Request
-          schema: 
-            $ref: '#/definitions/handler.errorResponse'
-        "404":
-          description: Bad Request
-          schema: 
-            $ref: '#/definitions/handler.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema: 
-            $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      security:
-      - ApiKeyAuth: []
-      sumary: Create Instituto
-      tags:
-      - institutos
-  /user/login:
-    post:
-      consumes:
-      - application/json
-      description: login
-      operationId: login
-      parameters:
-      - description: credentials
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/handler.signInInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: token
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "404":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      summary: SignIn
-      tags:
-      - auth
-  /auth/sign-up:
-    post:
-      consumes:
-      - application/json
-      description: create account
-      operationId: create-account
+      description: Login account
       parameters:
       - description: account info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/stopapp.User'
+          $ref: '#/definitions/dtos.LoginUser'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: integer
+            $ref: '#/definitions/dtos.Response'
         "400":
           description: Bad Request
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "404":
-          description: Bad Request
+          description: Not Found
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      summary: SignUp
+      summary: Login
       tags:
       - auth
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register account in the system
+      parameters:
+      - description: account info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.RegisterUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Create account
+      tags:
+      - auth
 swagger: "2.0"
